# static/swagger.yaml
@@ -50,7 +50,7 @@ paths:
               properties:
                 email:
                   type: string
-                  example: elec@gmail.com
+                  example: HD01@gmail.com
                 password:
                   type: string
                   example: password
@@ -211,8 +211,8 @@ paths:
 # User GET,POST,DELETE,PUT Endpoints added
 
   /core/users:
-    summary: MDM-users
-    description: MDM Modules for users
+    summary: CORE-users
+    description: CORE Modules for users
 
 # GET Method
     get:
@@ -335,6 +335,29 @@ paths:
           description: Failed to connect to Mongo DB
       tags: [ CORE ]
 
+    delete:
+      summary: Delete users data.
+      operationId: core-users-delete
+      description: >-
+          Derlete tariff data from database.
+      parameters:
+        - name: filter
+          in: query
+          description: Filter Query
+          schema:
+            type: string
+            example: { "type": "domestic" }
+      responses:
+        '200':
+          description: Success
+        '400':
+          description: Not found or bad request
+
+        '500':
+          description: Failed to connect to Mongo DB
+
+      tags: [ CORE ]
+
   /core/consumption:
     summary: Core Consumption
     description: Core Modules for Consumption
@@ -388,6 +411,77 @@ paths:
       tags: [ CORE ]
 
 
+  /core/excess:
+    summary: Core Excess
+    description: Core Modules for Excess
+
+    # GET Method
+    post:
+      summary: Insert excess data.
+      operationId: core-excess-post
+      description: >-
+        Inserts excess data into database.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                type:
+                  type: string
+                  example: permenant
+                status:
+                  type: boolean
+                  example: True
+                reason:
+                  type: string
+                  example: permanant data
+                start_date:
+                  type: string
+                  example: 09-09-1998
+                end_date:
+                    type: string
+                    example: 09-10-1998
+
+      responses:
+        '200':
+          description: User data created
+        '201':
+          description: User data  is not create
+        '500':
+          description: Failed to connect to Mongo DB
+      tags: [ CORE ]
+
+
+#Providers get
+
+  /core/providers:
+    summary: CORE-providers
+    description: CORE Modules for providers
+
+    # GET Method
+    get:
+      summary: Fetch providers data.
+      operationId: core-providers-get
+      description: >-
+        Fetches providers data from database.
+      parameters:
+        - name: filter
+          in: query
+          description: Filter Query
+          schema:
+            type: string
+            example: { "email": "elec@gmail.com" }
+      responses:
+        '200':
+          description: Success
+        '400':
+          description: Not found or bad request
+        '500':
+          description: Failed to connect to Mongo DB
+
+      tags: [ CORE ]
 ##DELETE Method
 #
 #    delete:
